<resources>
    <string name="app_name">Beam Wallet</string>
    <string name="redirect" translatable="false">open.mainnet.app</string>
    <string name="common_logo_text">Confidential DeFi Platform and\nCryptocurrency</string>
    <string name="done">Done</string>
    <string name="common_error">Oops, something went wrong…</string>
    <string name="online">Online</string>
    <string name="updating">Updating</string>
    <string name="updating_mobile">mobile node: updating %s, change the node type for the faster sync.</string>
    <string name="common_status_error">Cannot connect to</string>
    <string name="updating_own">own node: updating %s</string>
    <string name="common_status_error_own_node">Cannot connect to own node: %s, reconnect to another node</string>
    <string name="common_status_error_mobile_node">Cannot connect to mobile node, reconnect to another node</string>
    <string name="common_status_error_random_node">Cannot connect to random node, reconnect to another node</string>
    <string name="open">Open</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="change_address">Change</string>
    <string name="change_address_title">Change address</string>
    <string name="change_utxo_type">Change</string>
    <string name="ok">OK</string>
    <string name="undo">Undo</string>
    <string name="next">Next</string>
    <string name="activate">Activate</string>
    <string name="copied">Copied!</string>
    <string name="more">More</string>
    <string name="share_qr">share QR</string>
    <string name="common_security_mode_title">Activate privacy  mode</string>
    <string name="common_security_mode_message">All balances will be hidden until the eye icon is tapped again.</string>
    <string name="common_fingerprint_error">Fingerprint can’t be recognized, please enter your password.</string>
    <string name="common_faceid_error">Face recognition can’t be recognized, please enter your password.</string>
    <string name="common_share_title">Share…</string>
    <string name="common_external_link_dialog_title">External link</string>
    <string name="common_external_link_dialog_message">Beam Wallet app requires permission to open external link in the browser. This action will expose your IP to the web server. To avoid it, choose "Cancel". You can change your choice in app setting anytime.</string>
    <string name="currency_beam">BEAM</string>
    <string name="currency_groth">GROTH</string>
    <string name="error_no_internet_connection">No Internet connection</string>
    <string name="error_incorrect_node">Incorrect node name or no Internet connection</string>
    <string name="wallet">Wallet</string>
    <string name="address_book">Address book</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="storage_permission_required_message_small">Please, grant storage permission</string>
    <string name="create_new_wallet">Create new wallet</string>
    <string name="restore_wallet">Restore wallet</string>
    <string name="welcome_restore_or_create">Restore wallet or create new one</string>
    <string name="copy">Copy</string>
    <string name="welcome_description">Create new wallet by generating seed phrase. If you ever lose your device, you will need this phrase to recover your wallet! Never type your seed phrase in keychains or password managers. Never save it in your local or remote folders in any form.</string>
    <string name="welcome_no_see">Do not let anyone see your seed phrase.</string>
    <string name="welcome_no_type">Never type your seed phrase into password managers or elsewhere.</string>
    <string name="welcome_copy">Make at least 2 copies of the phrase in case of emergency.</string>
    <string name="password">Password</string>
    <string name="welcome_title_change_alert">Restore wallet or create new one</string>
    <string name="welcome_change_alert">If you’ll restore a wallet all transaction history and addresses will be lost.</string>
    <string name="welcome_btn_change_alert">Proceed</string>
    <string name="welcome_where_to_buy_beam">Where to buy BEAM?</string>
    <string name="welcome_using_two_wallets_notification_message">Don’t use same seed phrase on several devices, your balance and transaction list won’t be synchronized.</string>
    <string name="welcome_using_two_wallets_notification_title">Do not simultaneously run two wallets initiated from the same seed phrase</string>
    <string name="pass_proceed_to_wallet">Start using your wallet</string>
    <string name="pass_save_new">Save new password</string>
    <string name="proceed">Proceed</string>
    <string name="welcome_open">Open your wallet</string>
    <string name="enter_your_password_to_access_the_wallet">Enter your password to access the wallet.</string>
    <string name="welcome_open_description_with_fingerprint">Use Fingerprint or enter your password to access the wallet.</string>
    <string name="welcome_open_description_with_faceid">Use Face recognition or enter your password to access the wallet.</string>
    <string name="use_faceid_access_wallet">Use Face recognition to access the wallet.</string>
    <string name="welcome_seed_description">Your seed phrase is the access key to all the funds in your wallet. After successful verification, you won’t be able to see your seed phrase in settings. Print or write down the phrase to keep it in a safe or in a locked vault. Without the phrase you will not be able to recover your money.</string>
    <string name="welcome_seed_title">Seed phrase</string>
    <string name="welcome_seed_save_title">Save seed phrase</string>
    <string name="welcome_seed_save_description">Please write the seed phrase down. Do not screenshot it and save it in your photo gallery. It makes the phrase prone to cyber attacks and, therefore, less secure.</string>
    <string name="welcome_validation_title">Confirm seed phrase</string>
    <string name="welcome_validation_description">To ensure the seed phrase is written down correctly, please fill in the specific words below.</string>
    <string name="welcome_validation_return_seed_message">Your current seed will become obsolete and the new seed will be generated</string>
    <string name="welcome_restore_description">Type in your seed phrase</string>
    <string name="welcome_progress_create">Creating wallet</string>
    <string name="welcome_progress_open">Loading wallet</string>
    <string name="welcome_progress_restore">Restoring wallet</string>
    <string name="welcome_progress_restore_error_title">Wallet restore failure</string>
    <string name="welcome_progress_restore_download_error">The restore file couldn\'t be downloaded. Please try again later.</string>
    <string name="welcome_progress_restore_error_description">The wallet can’t connect to the node. Please try again later.</string>
    <string name="welcome_progress_restore_btn_try_again">Try again</string>
    <string name="welcome_progress_cancel_restore_title">Canceling restore</string>
    <string name="welcome_progress_cancel_restore_description">You are going to cancel restore process. All data will be lost. Do you want to continue?</string>
    <string name="welcome_progress_update_utxo_description">Scanning UTXO</string>
    <string name="welcome_progress_restore_description">Restored</string>
    <string name="welcome_progress_download_description">Downloaded</string>
    <string name="welcome_progress_restore_description_full_top">Restoring the wallet may take a while.\n\nPlease wait till the node is fully synchronized with the blockchain, do not close or minimize the wallet app.</string>
    <string name="welcome_progress_restore_description_full_bottom">Only the wallet balance (UTXO) can be restored, transaction info is always private and never kept on the blockchain.</string>
    <string name="pass_screen_description">Create password to access your wallet</string>
    <string name="pass_screen_change_description">Create new password to access your wallet</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="pass_description_title">Strong password needs to meet the following requirements:</string>
    <string name="pass_description_chars">•  the length must be at least 10 characters</string>
    <string name="pass_description_lowercase">•  must contain at least one lowercase letter</string>
    <string name="pass_description_uppercase">•  must contain at least one uppercase letter</string>
    <string name="pass_description_number">•  must contain at least one number</string>
    <string name="password_can_not_be_empty">Password can not be empty</string>
    <string name="password_does_not_meet_requirements">Password does not meet the requirements below</string>
    <string name="pass_old_pass_error">New password cannot be the same as old</string>
    <string name="pass_wrong">Wrong password</string>
    <string name="confirm_password">Password confirmation</string>
    <string name="pass_return_seed_message">If you return to seed phrase, it would be changed and your local password won’t be saved.</string>
    <string name="pass_back_seed_title">Back to seed phrase</string>
    <string name="pass_return_seed_title">Return to seed phrase</string>
    <string name="pass_return_seed_btn_create_new">Generate</string>
    <string name="back">Back</string>
    <string name="wallet_asset_sent_message">%ss sent</string>
    <string name="wallet_sent_message">Beams sent</string>
    <string name="available">Available</string>
    <string name="in_progress">In progress</string>
    <string name="sending_to_own_address">Sending to own address</string>
    <string name="maturing">Maturing</string>
    <string name="receive">Receive</string>
    <string name="send">Send</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="sent_to_own_address">Sent to own address</string>
    <string name="wallet_status_in_progress_sender">Waiting for sender</string>
    <string name="wallet_status_in_progress_receiver">Waiting for receiver</string>
    <string name="failed">Failed</string>
    <string name="expired">This address is already expired</string>
    <string name="expired_transaction">Expired</string>
    <string name="cancelled">Canceled</string>
    <string name="pending">Pending</string>
    <string name="transactions">Transactions</string>
    <string name="export">Export</string>
    <string name="export_transaction_history_title">Export transaction history</string>
    <string name="export_transaction_history_text">Would you like to save transaction history on your device or share it?</string>
    <string name="transaction_history">Transaction history</string>
    <string name="copy_address">Copy address</string>
    <string name="addresses">Addresses</string>
    <string name="edit_address">Edit address</string>
    <string name="share">Share</string>
    <string name="save_to_downloads">Save to downloads</string>
    <string name="node">Node</string>
    <string name="contacts">Contacts</string>
    <string name="delete_address">Delete address</string>
    <string name="expire_address_now">Expire now</string>
    <string name="active_address">Activate address</string>
    <string name="enter_your_current_password">Enter your current password</string>
    <string name="delete_all_transactions_related_to_this_address">Delete all transactions related to this address</string>
    <string name="add_contact">Add contact</string>
    <string name="tags">Tags</string>
    <string name="selected">Selected</string>
    <string name="export_wallet_data">Export wallet data</string>
    <string name="mobile_node_title">Mobile node</string>
    <string name="random_node_title">Random node</string>
    <string name="own_node_title">Own node</string>
</resources>