<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/all"
        android:title="@string/selected"
        app:showAsAction="always"
        android:icon="@drawable/ic_checkbox_empty_copy"  />
    <item
        android:id="@+id/copy"
        android:icon="@drawable/address_copy"
        android:title="@string/copy_address"
        app:showAsAction="always" />
    <item
        android:id="@+id/edit"
        android:icon="@drawable/address_edit"
        android:title="@string/edit_address"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/menu_delete"
        android:title="@string/delete_address"
        app:showAsAction="always" />
    <item android:id="@+id/add"
        android:title="@string/add_contact"
        app:showAsAction="always"
        android:icon="@drawable/ic_add"  />
</menu>