<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:background="@drawable/wallet_state_card_backgroud"
    android:orientation="horizontal">

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/wallet_state_card_background_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="0.05"/>

    <ImageView
        android:id="@+id/iconView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="15dp"
        android:layout_marginTop="17dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_icon_node"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLabel"
        style="@style/common_menu_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintStart_toEndOf="@+id/iconView"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/node" />

    <TextView
        android:id="@+id/randomNode"
        style="@style/common_menu_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/random_node_title"
        app:layout_constraintStart_toStartOf="@+id/textLabel"
        app:layout_constraintTop_toBottomOf="@+id/textLabel" />

    <TextView
        android:id="@+id/mobileNode"
        style="@style/common_menu_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/mobile_node_title"
        app:layout_constraintStart_toStartOf="@+id/randomNode"
        app:layout_constraintTop_toBottomOf="@+id/randomNode" />

    <TextView
        android:id="@+id/ownNode"
        style="@style/common_menu_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/own_node_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/mobileNode"
        app:layout_constraintTop_toBottomOf="@+id/mobileNode" />

</androidx.constraintlayout.widget.ConstraintLayout>