<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/common_alert_dialog_background"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/clearDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/delete_address"
        android:textColor="@color/common_text_color"
        android:textSize="@dimen/common_alert_title_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deleteAllTransactionsTitle"
        style="@style/common_text_big_light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_alert_dialog_margin"
        android:layout_marginEnd="8dp"
        android:text="@string/delete_all_transactions_related_to_this_address"
        app:layout_constraintEnd_toStartOf="@+id/deleteAllTransactionsCheckbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clearDialogTitle" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/deleteAllTransactionsCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/deleteAllTransactionsTitle"
        app:layout_constraintBottom_toBottomOf="@id/deleteAllTransactionsTitle"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settings_dialog_clear_buttons_margin_top"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="?attr/subHeaderTextColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/btnConfirm"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteAllTransactionsTitle" />

    <TextView
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settings_dialog_clear_buttons_margin_top"
        android:paddingStart="@dimen/alert_dialog_button_padding"
        android:text="@string/ok"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteAllTransactionsTitle"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>